test/Fail/Issue2883.err
Issue2883.agda:33.19-20: error: [UnequalTerms]
Σ (El box) (λ x → El ((λ { [ a ] → box }) x)) !=< Nat
when checking that the expression p has type Nat
